--- a/1D_DM.ipynb
+++ b/1D_DM.ipynb
@@ -1671,7 +1671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"/home/arnabdey/Placement ML projects/.vscode/Diffusion/myModel.pt\")"
+    "torch.save(model.state_dict(), \"PATH/myModel.pt\")"
    ]
   },
   {
@@ -1691,7 +1691,7 @@
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load(\"/home/arnabdey/Placement ML projects/.vscode/Diffusion/myModel.pt\"))"
+    "model.load_state_dict(torch.load(\"PATH/myModel.pt\"))"
    ]
   },
   {
